--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ AUTH_GOOGLE_SECRET=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
 AUTH_GOOGLE_ID=1046214010801-qhfcpd9oncfqtjcr3rbe0s5np58nact9.apps.googleusercontent.com
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dy678ssd9"
+
+NEXT_PUBLIC_APP_URL="http://localhost:3000/"
